--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "npm run development",
-    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch-poll": "npm run watch -- --watch-poll",
-    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "prod": "npm run production",
-    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-  },
-  "devDependencies": {
-    "axios": "^0.17",
-    "bootstrap-sass": "^3.3.7",
-    "cross-env": "^5.1.3",
-    "jquery": "^3.2",
-    "laravel-mix": "^1.7.2",
-    "lodash": "^4.17.4",
-    "vue": "^2.5.13",
-    "vue-router": "^3.0.1"
-  },
-  "dependencies": {
-    "babel-polyfill": "^6.26.0",
-    "moment": "^2.20.1"
-  }
+    "private": true,
+    "scripts": {
+        "dev": "npm run development",
+        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "watch": "npm run development -- --watch",
+        "watch-poll": "npm run watch -- --watch-poll",
+        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "prod": "npm run production",
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    },
+    "devDependencies": {
+        "axios": "^0.18",
+        "bootstrap-sass": "^3.3.7",
+        "cross-env": "^5.1.6",
+        "jquery": "^3.3.1",
+        "laravel-mix": "^2.0",
+        "lodash": "^4.17.10",
+        "vue": "^2.5.16",
+        "vue-router": "^3.0.1"
+    },
+    "dependencies": {
+        "ajv": "^6.5.0",
+        "babel-polyfill": "^6.26.0",
+        "moment": "^2.20.1"
+    }
 }
